--- a/raylib-sys/Cargo.toml
+++ b/raylib-sys/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+bindgen = "0.51.1"
+cmake = "0.1.42"
+lazy_static = "1.4.0"
+regex = "1.3.1"
+
 [dependencies]
